--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           		<div class="card text-center mt-3">
             		<div class="card-block mt-3">
                   <div class="card-body"> 
-              			<img class="rounded-circle" src="./img/profilepic.jpeg" height=20%>
+              			<img class="rounded-circle img-fluid" src="./img/profilepic.jpeg" height=20%>
               			<h4 class="card-title mt-3">Selina Kurz</h4>
               			<p class="card-text">
                 		Highly Motivated. Enthusiastic. Reliable. My international experience enables me to adjust to different environments and individuals very easily.
@@ -221,6 +221,7 @@
                 <br>
                Participated in practice and tournaments in high school and at University
               </p>
+
     </div>
   </body>
 </html>
